[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/devtools/appcacheutils.properties
+++ b/xh/browser/chrome/browser/devtools/appcacheutils.properties
@@ -19,7 +19,7 @@ noManifest=Indawo yolawulo ayinayo i-manifest.
 
 # LOCALIZATION NOTE (notUTF8): the associated cache manifest has a character
 # encoding that is not UTF-8. Parameters: %S is the current encoding.
-notUTF8=I-Manifest unophawu loku-enkhowuda kwe-%S. I-Manifests kufuneka ibenophawu loku-emkhowuda oluthi-utf-8.
+notUTF8=I-Manifest unophawu loku-enkhowuda %S. I-Manifests kufuneka ibenophawu loku-emkhowuda oluthi-utf-8.
 
 # LOCALIZATION NOTE (badMimeType): the associated cache manifest has a
 # mimetype that is not text/cache-manifest. Parameters: %S is the current
@@ -43,7 +43,7 @@ fallbackBlocksURI=Umgca wecandelo le-FALLBACK %1$S (%2$S) ithintela i-caching yo
 # references a URI that has a file modified after the cache manifest.
 # Parameters: %1$S is the resource name, %2$S is the cache manifest, %3$S is
 # the line number.
-fileChangedButNotManifest=Ifiyile %1$S yayilungiswe emva kwe-%2$S. Ngaphandle kokuba isiqendu kwifayile ye-manifest itshintshe inguqulelo e-cached iza kusetyenziswa endaweni yokuba isemgceni %3$S.
+fileChangedButNotManifest=Ifiyile %1$S yayilungiswe emva %2$S. Ngaphandle kokuba isiqendu kwifayile ye-manifest itshintshe inguqulelo e-cached iza kusetyenziswa endaweni yokuba isemgceni %3$S.
 
 # LOCALIZATION NOTE (cacheControlNoStore): the specified page has a header
 # preventing caching or storing information. Parameters: %1$S is the resource
