--- a/xh/browser/installer/mui.properties
+++ b/xh/browser/installer/mui.properties
@@ -22,7 +22,7 @@
 # from en-US contains a \n.
 
 MUI_TEXT_WELCOME_INFO_TITLE=Wamkelekile kwi-$BrandFullNameDA Setup Wizard
-MUI_TEXT_WELCOME_INFO_TEXT=Igcisa liya kukukhokelela ekufakelweni kwe-$BrandFullNameDA.\n\nKucetyiswa ukuba uzivale zonke ezinye iiaplikheshini phambi kokuba uqalise ngoseto. Oku kuya kwenza ukuba ube nokuhlaziya iifayile zenkqubo efanelekileyo ungayivulanga ikhompyutha yakho.\n\n$_CLICK
+MUI_TEXT_WELCOME_INFO_TEXT=Igcisa liya kukukhokelela ekufakelweni $BrandFullNameDA.\n\nKucetyiswa ukuba uzivale zonke ezinye iiaplikheshini phambi kokuba uqalise ngoseto. Oku kuya kwenza ukuba ube nokuhlaziya iifayile zenkqubo efanelekileyo ungayivulanga ikhompyutha yakho.\n\n$_CLICK
 MUI_TEXT_COMPONENTS_TITLE=Khetha iikhomponenti
 MUI_TEXT_COMPONENTS_SUBTITLE=Khetha iifitsha ze-$BrandFullNameDA ofuna uzifakela.
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_TITLE=Inkcazelo
@@ -46,7 +46,7 @@ MUI_TEXT_STARTMENU_SUBTITLE=Khetha ifolda yemenyu yokuqalisa yondlelamfutshane w
 MUI_INNERTEXT_STARTMENU_TOP=Chonga ifolda yemenyu yokuqalisa ongathanda ukwenzela kuyo ondlelamfutshane beprogram. Usenokufaka igama ukwenza ifayile entsha.
 MUI_TEXT_ABORTWARNING=Uqinisekile ufuna ukushiya useto lwe-$BrandFullName?
 MUI_UNTEXT_WELCOME_INFO_TITLE=Wamkelekile kwi-$BrandFullNameDA Unistall Wizard
-MUI_UNTEXT_WELCOME_INFO_TEXT=Igcisa liya kukukhokelela ekukhutshweni kwe-$BrandFullNameDA.\n\nPhambi kokuba uqalise ukukhupha, qiniseka ukuba $BrandFullNameDA ayihambi.\n\n$_CLICK
+MUI_UNTEXT_WELCOME_INFO_TEXT=Igcisa liya kukukhokelela ekukhutshweni $BrandFullNameDA.\n\nPhambi kokuba uqalise ukukhupha, qiniseka ukuba $BrandFullNameDA ayihambi.\n\n$_CLICK
 MUI_UNTEXT_CONFIRM_TITLE=Khupha $BrandFullNameDA
 MUI_UNTEXT_CONFIRM_SUBTITLE=Susa $BrandFullNameDA kwikhompyutha yakho.
 MUI_UNTEXT_UNINSTALLING_TITLE=Ikhupha okufakelweyo
@@ -57,5 +57,5 @@ MUI_UNTEXT_ABORT_TITLE=Ukukhutshwa kunqanyulwe phakathi
 MUI_UNTEXT_ABORT_SUBTITLE=Ukukhutshwa akugqitywanga ngempumelelo.
 MUI_UNTEXT_FINISH_INFO_TITLE=Igqibezela $BrandFullNameDA Uninstall Wizard
 MUI_UNTEXT_FINISH_INFO_TEXT=$BrandFullNameDA ikhutshiwe kwikhompyutha yakho.\n\nCofa kuIgqibile ukuvala eli gcisa.
-MUI_UNTEXT_FINISH_INFO_REBOOT=Ikhompyutha yakho kufuneka iqaliswe kwakhona ukuze kube nokugqitywa ukukhutshwa kwe-$BrandFullNameDA. Ufuna ukuyivula ngoku?
+MUI_UNTEXT_FINISH_INFO_REBOOT=Ikhompyutha yakho kufuneka iqaliswe kwakhona ukuze kube nokugqitywa ukukhutshwa $BrandFullNameDA. Ufuna ukuyivula ngoku?
 MUI_UNTEXT_ABORTWARNING=Uqinisekile ufuna ukushiya $BrandFullName Uninstall?
