--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -92,8 +92,8 @@ popupWarningButton=Iindlela zokhetho
 popupWarningButton.accesskey=O
 popupWarningButtonUnix=Izikhethwa
 popupWarningButtonUnix.accesskey=P
-popupAllow=Vumela okuzivelelayo kwe-%S
-popupBlock=Vumela okuzivelelayo kwe-%S
+popupAllow=Vumela okuzivelelayo %S
+popupBlock=Vumela okuzivelelayo %S
 popupWarningDontShowFromMessage=Musa ukubonisa lo myalezo xa kunqandiwe okuzivelelayo
 popupWarningDontShowFromLocationbar=Musa ukubonisa inkcukacha yebha xa kunqandiwe okuzivelelayo
 popupShowPopupPrefix=Bonisa '%S'
@@ -282,13 +282,13 @@ offlineApps.neverAccessKey=e
 offlineApps.notNow=Hayi Ngoku
 offlineApps.notNowAccessKey=N
 
-offlineApps.usage=Le webhusayithi (%S) ngoku igcina ngaphezu kwe-%SMB yeengcombolo kwikhompyutha yakho eziya kusetyenziswa ngaphandle kwenethiwekhi.
+offlineApps.usage=Le webhusayithi (%S) ngoku igcina ngaphezu %SMB yeengcombolo kwikhompyutha yakho eziya kusetyenziswa ngaphandle kwenethiwekhi.
 offlineApps.manageUsage=Bonisa iisethingi
 offlineApps.manageUsageAccessKey=S
 
 # LOCALIZATION NOTE (indexedDB.usage): %1$S is the website host name
 # %2$S a number of megabytes.
-indexedDB.usage=Le webhusayithi (%1$S) izama ukugcina ngaphezu kwe-%2$S MB yeengcombolo kwikhompyutha yakho eziya kusetyenziswa ngaphandle kwenethiwekhi.
+indexedDB.usage=Le webhusayithi (%1$S) izama ukugcina ngaphezu %2$S MB yeengcombolo kwikhompyutha yakho eziya kusetyenziswa ngaphandle kwenethiwekhi.
 
 identity.identified.verifier=Iqinisekisiwe: yi%S
 identity.identified.verified_by_you=Wongeze ukhuseleko kule sayithi.
