--- a/xh/browser/installer/custom.properties
+++ b/xh/browser/installer/custom.properties
@@ -19,7 +19,7 @@
 # from en-US contains a \n.
 
 REG_APP_DESC=$BrandShortName ibhrawuza iwebhu khuselekileyo nalula. Ulungiselelo lomsebenzisi oluqhelekileyo, iifitsha zokhuseleko kuqukwa nokhuselo kubusela benethiwekhi kunye nokhangelo oluhlangeneyo zenza ufumane okona kungcono kwiwebhu.
-CONTEXT_OPTIONS=&Ekunokukhethwa kuko kwe-$BrandShortName
+CONTEXT_OPTIONS=&Ekunokukhethwa kuko $BrandShortName
 CONTEXT_SAFE_MODE=$BrandShortName iMo &eKhuselekileyo
 OPTIONS_PAGE_TITLE=Udidi loseto
 OPTIONS_PAGE_SUBTITLE=Khetha okukhethwayo koseto
@@ -49,7 +49,7 @@ WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName iyasebenza.\n\nNceda uvale $Brand
 WARN_WRITE_ACCESS=Akuvunyelwa ukuba ubhale kwisalathisi sofakelo.\n\nCofa kuKULUNGILE ukukhetha isalathisi esahlukileyo.
 WARN_DISK_SPACE=Akunasithuba saneleyo kwidiski sokufakela kule ndawo.\n\nCofa kuKULUNGILE ukukhetha indawo eyahlukileyo.
 WARN_MIN_SUPPORTED_OS_MSG=Uxolo! $BrandShortName ayinakho ukufakelwa. Le nguqulelo $BrandShortName ifuna ${MinSupportedVer} okanye entsha kunayo.
-WARN_RESTART_REQUIRED_UNINSTALL=Ikhompyutha yakho mayiqaliswe kwakhona ukugqibezela ukukhupha obekufakiwe kwangaphambili kwe-$BrandShortName. Ufuna ukuvula ngoku?
+WARN_RESTART_REQUIRED_UNINSTALL=Ikhompyutha yakho mayiqaliswe kwakhona ukugqibezela ukukhupha obekufakiwe kwangaphambili $BrandShortName. Ufuna ukuvula ngoku?
 WARN_RESTART_REQUIRED_UPGRADE=Ikhompyutha yakho mayiqaliswe kwakhona ukugqibezela uhlaziyo lwangaphambili lwe-$BrandShortName. Ufuna ukuvula ngoku?
 ERROR_CREATE_DIRECTORY_PREFIX=Imposiso yenza isalathisi:
 ERROR_CREATE_DIRECTORY_SUFFIX=Cofa kuRhoxisa ukuyekisa ufakelo okanye \nkuZama kwakhona ukuzama kwakhona.
