[cy] update from Pootle (firefox)

--- a/cy/browser/chrome/browser/browser.properties
+++ b/cy/browser/chrome/browser/browser.properties
@@ -82,7 +82,7 @@ lwthemePostInstallNotification.manageButton.accesskey=M
 # %S will be replaced with the new theme name.
 lwthemeNeedsRestart.message=Bydd %S yn cael ei osod ar ôl i chi ail gychwyn.
 lwthemeNeedsRestart.button=Ailgychwyn Nawr
-lwthemeNeedsRestart.accesskey=R
+lwthemeNeedsRestart.accesskey=A
 
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -305,7 +305,7 @@ identity.unknown.tooltip=Nid yw'r wefan yn darparu gwybodaeth hunaniaeth.
 identity.chrome=Mae hon yn dudalen %S diogel.
 
 # Edit Bookmark UI
-editBookmarkPanel.pageBookmarkedTitle=Nod Tudalen i'r Ddalen
+editBookmarkPanel.pageBookmarkedTitle=Gosod Nod Tudalen
 editBookmarkPanel.pageBookmarkedDescription=Bydd %S yn cofio'r dudalen ar eich cyfer.
 editBookmarkPanel.bookmarkedRemovedTitle=Wedi Tynnu'r Nod Tudalen
 editBookmarkPanel.editBookmarkTitle=Golygu'r Nod Tudalen
@@ -343,7 +343,7 @@ webNotifications.showForSession.accesskey=s
 webNotifications.alwaysShow=Dangos Hysbysiadau Bob Tro
 webNotifications.alwaysShow.accesskey=A
 webNotifications.neverShow=Rhwystro Hysbysiadau Bob Tro
-webNotifications.neverShow.accesskey=N
+webNotifications.neverShow.accesskey=H
 webNotifications.showFromSite=Hoffech chi ddangos hysbysiadau gan %S?
 
 # Pointer lock UI
