sync browser with en-US

--- a/id/browser/chrome/browser/browser.properties
+++ b/id/browser/chrome/browser/browser.properties
@@ -103,12 +103,6 @@ popupShowPopupPrefix=Tampilkan '%S'
 badContentBlocked.blocked.message=%S memblokir konten pada laman ini.
 badContentBlocked.notblocked.message=%S tidak memblokir konten apa pun pada laman ini.
 
-# missing plugin installer
-installPlugin.message = Ingin menginstal plugin yang dibutuhkan untuk menampilkan media pada laman ini?
-installPlugin.button.label=Instal %S
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=Jangan tanya lagi
-installPlugin.ignoreButton.accesskey=J
 crashedpluginsMessage.title=Plugin %S berhenti bekerja tiba-tiba.
 crashedpluginsMessage.reloadButton.label=Muat ulang laman
 crashedpluginsMessage.reloadButton.accesskey=M
@@ -579,9 +573,12 @@ getUserMedia.sharingMenuApplication = %S (aplikasi)
 getUserMedia.sharingMenuScreen = %S (layar)
 getUserMedia.sharingMenuWindow = %S (jendela)
 getUserMedia.sharingMenuCameraMicrophone = %S (kamera dan mikrofon)
+getUserMedia.sharingMenuCameraScreen = %S (kamera dan layar)
+getUserMedia.sharingMenuCameraWindow = %S (kamera dan jendela)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon, dan aplikasi)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon, dan layar)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon, dan jendela)
+getUserMedia.sharingMenuCameraApplication = %S (kamera dan aplikasi)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dan aplikasi)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon dan layar)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon dan jendela)
@@ -602,3 +599,12 @@ slowStartup.disableNotificationButton.accesskey = J
 customizeTips.tip0 = %1$S: Anda dapat mengubahsuai %2$S sesuai keinginan Anda. Cukup seret ikon di atas ke bilah menu atau alat. %3$S tentang mengubahsuai %2$S.
 customizeTips.tip0.hint = Petunjuk
 customizeTips.tip0.learnMore = Pelajari lebih lanjut
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Mulai ulang %S untuk menerapkan pembaruan
+appmenu.updateFailed.description = Pembaruan di latar belakang gagal, unduh pembaruan secara langsung
+appmenu.restartBrowserButton.label = Mulai Ulang %S
+appmenu.downloadUpdateButton.label = Unduh Pembaruan
