--- a/id/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/id/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -94,8 +94,19 @@ quit-button.tooltiptext.linux2 = Keluar dari %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Keluar dari %1$S (%2$S)
 
-panic-button.label = Lupakan
-panic-button.tooltiptext = Lupakan beberapa riwayat penjelahan
+loop-call-button2.label = Mulai percakapan
+loop-call-button2.tooltiptext = Memulai sebuah percakapan
 
-loop-call-button.label = Undang seseorang ke percakapan
-loop-call-button.tooltiptext = Undang seseorang ke percakapan
+social-share-button.label = Bagikan Laman Ini
+social-share-button.tooltiptext = Bagikan Laman Ini
+
+panic-button.label = Lupakan
+panic-button.tooltiptext = Lupakan semua atau beberapa riwayat penjelajahan
+
+web-apps-button.label = Aplikais
+web-apps-button.tooltiptext = Temukan Aplikasi
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = Open WebIDE
