--- a/id/browser/chrome/browser/devtools/webide.properties
+++ b/id/browser/chrome/browser/devtools/webide.properties
@@ -19,8 +19,12 @@ importPackagedApp_title=Pilih Direktori
 importHostedApp_title=Buka Aplikasi yang Di-Host
 importHostedApp_header=Masukkan URL Manifest
 
-notification_showTroubleShooting_label=penyelesaian masalah
+notification_showTroubleShooting_label=Penyelesaian masalah
 notification_showTroubleShooting_accesskey=y
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Memuat…
 
 # These messages appear in a notification box when an error occur.
 
