--- a/id/browser/chrome/browser/downloads/downloads.properties
+++ b/id/browser/chrome/browser/downloads/downloads.properties
@@ -38,6 +38,33 @@ stateBlockedPolicy=Diblokir oleh kebijakan zona keamanan Anda
 # Indicates that the download was blocked after scanning.
 stateDirty=Diblokir: Mungking mengandung virus atau spyware
 
+# LOCALIZATION NOTE (blockedMalware, blockedPotentiallyUnwanted,
+#                    blockedUncommon):
+# These strings are shown in the panel for some types of blocked downloads, and
+# are immediately followed by the "Learn More" link, thus they must end with a
+# period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
+# this turns out to be longer than the other existing status strings.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Berkas ini mengandung virus atau malware.
+blockedPotentiallyUnwanted=Berkas ini meungkin dapat merusak komputer Anda.
+blockedUncommon=Berkas ini mungkin tidak aman untuk dibuka.
+
+# LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
+#                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
+#                    unblockTip, unblockButtonContinue, unblockButtonCancel):
+# These strings are displayed in the dialog shown when the user asks a blocked
+# download to be unblocked.  The severity of the threat is expressed in
+# descending order by the unblockType strings, it is higher for files detected
+# as malware and lower for uncommon downloads.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Yakin ingin membatalkan blokir untuk berkas ini?
+unblockTypeMalware=Berkas ini mengandung virus atau malware lainnya yang dapat merusak komputer Anda.
+unblockTypePotentiallyUnwanted=Berkas ini, menyamar sebagai unduhan yang penting, dapat membuat perubahan yang tidak diharapkan pada program dan pengaturan Anda.
+unblockTypeUncommon=Berkas ini telah diunduh dari situs web yang tidak umum dan berpotensi membahayakan dan mungkin tidak aman untuk dibuka.
+unblockTip=Anda dapat mencari sumber unduhan alternatif atau mencoba mengunduh berkasnya lagi nanti.
+unblockButtonContinue=Batalkan Saja Blokirnya
+unblockButtonCancel=Jaga keamanan
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits=%1$S %2$S
