--- a/id/browser/chrome/browser/loop/loop.properties
+++ b/id/browser/chrome/browser/loop/loop.properties
@@ -4,7 +4,17 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Gabung ke percakapan
+first_time_experience_button_label=Memulai
+
 share_link_header_text=Bagikan tautan ini untuk mengundang seseorang ke percakapan:
+invite_header_text=Undang seseorang untuk bergabung dengan Anda.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -52,12 +62,15 @@ problem_accessing_account=Terjadi Kesalahan Saat Mengakses Akun Anda
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Coba Lagi
 
-share_email_subject3=Anda telah diundang ke percakapan
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+share_email_subject4={{clientShortname}} — Gabung ke percakapan
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Untuk menerima undangan ini, salin atau klik tautan ini untuk memulai percakapan Anda:\r\n\r\n{{callUrl}}
+share_email_body4=Hai!\r\n\r\nMari bergabung ke percakapan video menggunakan {{clientShortname}}:\r\n\r\nAnda tidak perlu mengunduh atau menginstal apa pun. Cukup salin dan tempelkan URL berikut ke peramban Anda:\r\n\r\n{{callUrl}}\r\n\r\nJika mau, Anda juga dapat mengetahui lebih lanjut tentang {{clientShortname}} di {{learnMoreUrl}}\r\n\r\nYuk segera bergabung!
+
 share_button=Email
+share_button2=Kirim Email berisi Tautan
 copy_url_button=Salin
+copy_url_button2=Salin Tautan
 copied_url_button=Disalin!
 
 panel_footer_signin_or_signup_link=Masuk atau Daftar
@@ -84,6 +97,10 @@ new_contact_button=Kontak Baru
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Nama
 new_contact_email_placeholder=Email
+new_contact_phone_placeholder=Ponsel Firefox OS
+
+contacts_blocked_contacts=Kontak Diblokir
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -173,6 +190,7 @@ initiate_call_button_label2=Siap memulai perckaapan Anda?
 incoming_call_title2=Permintaan Percakapan
 incoming_call_accept_button=Terima
 incoming_call_accept_audio_only_tooltip=Terima dengan audio
+incoming_call_accept_audio_video_tooltip=Terima dengan video
 incoming_call_cancel_button=Batalkan
 incoming_call_cancel_and_block_button=Batalkan dan Blokir
 incoming_call_block_button=Blokir
@@ -242,7 +260,12 @@ legal_text_and_links3=Dengan menggunakan {{clientShortname}} Anda menyetujui {{t
   dan {{privacy_notice}}.
 legal_text_tos = Persyaratan Layanan
 legal_text_privacy = Pernyataan Privasi
-client_shortname_fallback=produk ini
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_beforeLogo=Diberdayakan oleh
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=Bagaimana kualitas percakapan Anda?
 feedback_what_makes_you_sad=Apa yang membuat Anda tidak suka?
@@ -267,3 +290,31 @@ feedback_rejoin_button=Gabung Kembali
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Laporkan pengguna
+
+
+help_label=Bantuan
+tour_label=Tur
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Percakapan {{conversationLabel}}
+rooms_leave_button_label=Tinggalkan
+rooms_list_copy_url_tooltip=Salin Tautan
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_current_conversations=Percakapan saat ini;Percakapan saat ini
+rooms_list_delete_tooltip=Hapus percakapan
+rooms_list_deleteConfirmation_label=Yakin?
+rooms_list_no_current_conversations=Tidak ada percakapan saat ini
+rooms_name_this_room_label=Beri nama percakapan ini
+rooms_new_room_button_label=Mulai percakapan
+rooms_only_occupant_label=Anda yang pertama di sini.
+rooms_panel_title=Pilih percakapan atau mulai yang baru
+rooms_room_full_label=Sudah ada dua orang pada percakapan ini.
+rooms_room_full_call_to_action_nonFx_label=Unduh {{brandShortname}} untuk memulainya sendiri
+rooms_room_full_call_to_action_label=Pelajari lebih lanjut tentang {{clientShortname}} »
+rooms_room_joined_label=Seseorang telah bergabung ke percakapan
+rooms_room_join_label=Gabung ke percakapan
