--- a/id/browser/chrome/browser/places/places.properties
+++ b/id/browser/chrome/browser/places/places.properties
@@ -71,16 +71,16 @@ OrganizerQueryDownloads=Unduhan
 OrganizerQueryAllBookmarks=Semua Markah
 OrganizerQueryTags=Tag
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Tag
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Markah
+switchtabResultLabel=Tab
+keywordResultLabel=Kata Kunci
+searchengineResultLabel=Pencarian
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
