--- a/id/dom/chrome/layout/css.properties
+++ b/id/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Diharapkan identifier untuk memperluas system, tetapi d
 PECounterASWeight=Tiap berat pada deskriptor additive-symbols harus lebih kecil dari berat sebelumnya.
 PEClassSelEOF=nama kelas
 PEClassSelNotIdent=Diharapkan identifier pada selector kelas tetapi ditemukan '%1$S'.
+PECoordinatePair=Diharapkan pasangan koordinat tetapi ditemukan '%1$S'.
 PETypeSelEOF=jenis elemen
 PETypeSelNotType=Diharapkan nama elemen atau '*' tetapi ditemukan '%1$S'.
 PEUnknownNamespacePrefix=Prefiks namespace '%1$S' tidak diketahui.
