--- a/id/dom/chrome/security/security.properties
+++ b/id/dom/chrome/security/security.properties
@@ -9,8 +9,12 @@ CrossSiteRequestBlocked=Permintaan Cross-Origin (CORS) diblokir: Penggunaan Same
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Situs ini menentukan header Strict-Transport-Security yang tidak valid.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=Situs ini menentukan header Public-Key-Pins yang tidak valid.
 InsecurePasswordsPresentOnPage=Isian sandi pada laman web yang tidak aman (http://). Hal ini berisiko info masuk pengguna dapat dicuri.
 InsecureFormActionPasswordsPresent=Isian sandi pada formulir yang menuju ke aksi form yang tidak aman (http://). Hal ini berisiko info masuk pengguna dapat dicuri.
 InsecurePasswordsPresentOnIframe=Isian sandi pada iframe yang tidak aman (http://). Hal ini berisiko info masuk pengguna dapat dicuri.
 LoadingMixedActiveContent=Memuat konten aktif campuran (tidak aman) pada laman aman "%1$S"
 LoadingMixedDisplayContent=Memuat konten tampilan campuran (tidak aman) pada laman aman "%1$S"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=Sebuah iframe yang mengizinkan allow-scripts dan allow-same-origin sekaligus untuk kotak hitamnya dapat membuang proses pengotakhitamannya.
