--- a/id/netwerk/necko.properties
+++ b/id/netwerk/necko.properties
@@ -37,3 +37,5 @@ PhishingAuth=Anda akan mengunjungi "%1$S". Situs ini mungkin berusaha untuk meni
 PhishingAuthAccept=Saya memahami dan akan berhati-hati
 SuperfluousAuth=Anda akan masuk ke situs "%1$S" dengan nama pengguna "%2$S", akan tetapi situs web tidak mewajibkan autentikasi. Kemungkinan ini merupakan usaha untuk menipu Anda.\n\nApakah benar "%1$S" adalah situs yang akan dikunjungi?
 AutomaticAuth=Anda akan masuk ke situs "%1$S" dengan nama pengguna "%2$S".
+
+TrackingUriBlocked=Sumber daya pada "%1$S" diblokir karena perlindungan pelacakan diaktifkan.
