--- a/id/security/manager/chrome/pipnss/nsserrors.properties
+++ b/id/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL menerima data ekstensi NPN yang tidak v
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Fitur SSL tidak didukung pada sambungan SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Fitur SSL tidak didukung server.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Fitur SSL tidak didukung klien.
+SSL_ERROR_INVALID_VERSION_RANGE=Rentang versi SSL tidak valid.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=Pihak lain SSL memilih cipher suite yang tidak diizinkan untuk versi protokol yang dipilih.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL menerima pesan handshake Hello Verify Request yang salah.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL menerima pesan handshake Hello Verify Request yang tidak diharapkan.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=SSL feature not supported for the protocol version.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL menerima pesan handshake Certificate Status yang tidak diharapkan.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Algoritme hash yang tidak didukung yang digunakan oleh pihak lain TLS.
+SSL_ERROR_DIGEST_FAILURE=Fungsi digest gagal.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Algoritme tanda tangan yang salah yang ditentukan pada elemen yang ditandatangani digital.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Ekstensi negosiasi protokol berikutnya tidak diaktifkan, tetapi pemanggilan kembali telah dibersihkan sebelum dibutuhkan.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Server mendukung tidak satu pun protokol yang diajukan klien pada ekstensi ALPN.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Server menilah handshake karena klien menurunkan ke versi TLS yang lebih rendah dari yang didukung server.
 SEC_ERROR_IO=Kesalahan Input/Output terjadi saat otorisasi keamanan.
 SEC_ERROR_LIBRARY_FAILURE=kegagalan pustaka keamanan.
 SEC_ERROR_BAD_DATA=pustaka keamanan: menerima data salah.
