--- a/id/toolkit/chrome/global/resetProfile.properties
+++ b/id/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,6 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Tampaknya Anda sudah agak lama belum menjalankan %S. Apakah Anda ingin membersihkannya agar terasa seperti baru diinstal? Oh iya, selamat datang kembali!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Setel Ulang %S…
-resetProfile.resetButton.accesskey=e
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Segarkan %S…
+refreshProfile.resetButton.accesskey=e
