--- a/id/dom/chrome/accessibility/AccessFu.properties
+++ b/id/dom/chrome/accessibility/AccessFu.properties
@@ -155,6 +155,7 @@ statePressed     =    ditekan
 stateExpanded    =    dibentangkan
 stateCollapsed   =    diciutkan
 stateUnavailable =    tidak tersedia
+stateReadonly    =    hanya-baca
 stateRequired    =    diwajibkan
 stateTraversed   =    dikunjungi
 stateHasPopup    =    mengandung pop up
