sync mobile and browser with en-US

--- a/id/mobile/android/chrome/browser.properties
+++ b/id/mobile/android/chrome/browser.properties
@@ -323,6 +323,10 @@ remoteNotificationGenericName=Aplikasi
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Mendengarkan di port %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Aktifkan pendebugan untuk %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Sentuh untuk mengaktifkan debugger daring
 
 # Helper apps
 helperapps.open=Buka
