--- a/id/mobile/android/chrome/webapp.properties
+++ b/id/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 pembaruan gagal;#1 pembaruan gagal
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Gagal mengambil pembaruan untuk %1$S;Gagal mengambil pembaruan untuk %1$S
 
-webappsDisabledInGuest=Penginstalan aplikasi dinonaktifkan dalam sesi tamu
+webappsDisabled=Penginstalan aplikasi dinonaktifkan
