--- a/xh/toolkit/chrome/mozapps/update/updates.properties
+++ b/xh/toolkit/chrome/mozapps/update/updates.properties
@@ -11,7 +11,7 @@ updateFullName=%S (%S)
 # where update version from the update xml
 # example: MyApplication 10.0.5
 updateName=%S %S
-licenseContentDownloading=Ifumana ilayisensi ye-for %S %S…
+licenseContentDownloading=Ifumana ilayisensi ye-%S %S…
 updateMoreInfoContentDownloading=Ifumana iinkcukacha ezithe vetshe ezimalunga ne-%S %S…
 
 # LOCALIZATION NOTE: When present
