--- a/uk/mobile/android/chrome/browser.properties
+++ b/uk/mobile/android/chrome/browser.properties
@@ -239,7 +239,7 @@ contextmenu.shareImage=Поділитись зображенням
 contextmenu.search=Пошук %S
 contextmenu.saveImage=Зберегти зображення
 contextmenu.setImageAs=Встановити зображення як
-contextmenu.addSearchEngine2=Add as Search Engine
+contextmenu.addSearchEngine2=Додати пошуковиком
 contextmenu.playMedia=Грати
 contextmenu.pauseMedia=Пауза
 contextmenu.shareMedia=Поділитись відео
