[xh] update from Pootle (firefox)

--- a/xh/browser/installer/nsisstrings.properties
+++ b/xh/browser/installer/nsisstrings.properties
@@ -49,7 +49,7 @@ SPACE_AVAILABLE=Isithuba Esikhoyo:
 ONE_MOMENT_INSTALL=Umzuzwana omnye, $BrandShortName iya kumisela nje ukuba kugqitywe ukufakela…
 ONE_MOMENT_UPGRADE=Umzuzu ube mnye, $BrandShortName iza kumisela lusakube lugqibile uphuhliso…
 INSTALL_MAINT_SERVICE=&Fakela inkonzo yohlaziyo lomva we-$BrandShortName
-SEND_PING=Th&umela inkcazelo ngolu fakelo kwi-Mozilla
+SEND_PING=Th&umela inkcazelo ngolu fakelo Mozilla
 BROWSE_BUTTON=Kh&angela…
 DEST_FOLDER=Ifolda oya kuyo
 
