--- a/xh/browser/chrome/browser/newTab.properties
+++ b/xh/browser/chrome/browser/newTab.properties
@@ -16,13 +16,13 @@ newtab.sponsored.explain=Esi sihloko siboniswayo  kuwe egameni lomlingane kaMozi
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
-newtab.enhanced.explain=Umlingane ka-Mozilla uyiphucule ngembonakalo lethayile, endaweni yesikrinishoti. Ungacima iithayile eziphuculweyo ngokucofa iqhosha i-%1$S ngokuzikhethela. i-%2$S
+newtab.enhanced.explain=Umlingane Mozilla uyiphucule ngembonakalo lethayile, endaweni yesikrinishoti. Ungacima iithayile eziphuculweyo ngokucofa iqhosha i-%1$S ngokuzikhethela. i-%2$S
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
 newtab.intro.paragraph1=Xa uvula ithebhu entsha, uyakubona iithayile ezisuka kwisayithi oqhele ukuyindwendwela, kunye neethayile esicinga ukuba zinokuba nomdla kuwe. Ezinye zezithayile zinokuxhaswa ngabalingane baka-Mozila. Sakusoloko sisitsho kuwe ukuba zeziphi iithayile oxhaswa kuzo. i-%1$S
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
 # active link using string newtab.privacy.link as text.
-newtab.intro.paragraph2=Ukuze sikwazi ukuzisa iinkonzo, i-Mozilla iqokelela ize isebenzise iinkcukacha ezithile zohlalutyo ezigqamane nokusetyenziswa kweethayile ngokumalunga ne-%1$S yethu.
+newtab.intro.paragraph2=Ukuze sikwazi ukuzisa iinkonzo, Mozilla iqokelela ize isebenzise iinkcukacha ezithile zohlalutyo ezigqamane nokusetyenziswa kweethayile ngokumalunga ne-%1$S yethu.
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window.
 newtab.intro.paragraph3=Ungayicima ifitsha yeethayile ngokucofa iqhosha %1$S ngokuzikhethela
