--- a/xh/browser/chrome/overrides/appstrings.properties
+++ b/xh/browser/chrome/overrides/appstrings.properties
@@ -3,24 +3,24 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 malformedURI=I-URL ayisebenzi kwaye ayinako ukulayishwa.
-fileNotFound=I-Firefox ayiyifumani ifayile kwi-%S.
-dnsNotFound=I-Firefox ayiyifumani iseva kwi-%S.
-unknownProtocolFound=I-Firefox ayazi ukuba mayiyivule njani le dilesi kuba enye yezi prothokhol zilandelayo (%S) ayinxulumananga nayo nayiphi na iprogram okanye ayivumelekanga kule ndawo.
-connectionFailure=I-Firefox ayikwazi kuseka ukudityaniswa kwiseva kwi-%S.
+fileNotFound=Firefox ayiyifumani ifayile kwi-%S.
+dnsNotFound=Firefox ayiyifumani iseva kwi-%S.
+unknownProtocolFound=Firefox ayazi ukuba mayiyivule njani le dilesi kuba enye yezi prothokhol zilandelayo (%S) ayinxulumananga nayo nayiphi na iprogram okanye ayivumelekanga kule ndawo.
+connectionFailure=Firefox ayikwazi kuseka ukudityaniswa kwiseva %S.
 netInterrupt=Ukudityaniswa kwi-%S kuphazanyisiwe xa iphepha lalilayisha.
 netTimeout=Iseva kwi-%S ithatha ixesha elide ukuphendula.
-redirectLoop=I-Firefox ifumanise ukuba iseva isithumela kwenye indawo isicelo sale dilesi ngendlela engasoze igqibeke.
+redirectLoop=Firefox ifumanise ukuba iseva isithumela kwenye indawo isicelo sale dilesi ngendlela engasoze igqibeke.
 ## LOCALIZATION NOTE (confirmRepostPrompt): In this item, don't translate "%S"
 confirmRepostPrompt=Ukubonisa eli phepha, i-%S kufuneka ithumele inkcazelo eya kuphinda naliphi na inyathelo (njengokukhangela okanye ukuyalela ingqinisekiso) eyenziwe ngaphambili.
 resendButton.label=Thumela kwakhona
-unknownSocketType=I-Firefox ayiyazi indlela yokunxibelelana neseva.
+unknownSocketType=Firefox ayiyazi indlela yokunxibelelana neseva.
 netReset=Ukudityaniswa neseva kusetiwe kwakhona xa iphepha lalilayisha.
 notCached=Olu xwebhu alusafumaneki.
-netOffline=I-Firefox ikwimo yokungabikho kwinethiwekhi ngoku kwaye ayinakho ukubhrawuza iwebhu.
+netOffline=Firefox ikwimo yokungabikho kwinethiwekhi ngoku kwaye ayinakho ukubhrawuza iwebhu.
 isprinting=Uxwebhu alunakho ukutshintsha ngelixa liprintayo okanye likumboniso wangaphambili wokuprinta.
-deniedPortAccess=Le dilesi isebenzisa itshaneli yenethiwekhi edla ngokusetyenziselwa ezinye iinjongo ezingezizo ezokubhrawuza iwebhu. I-Firefox isirhoxisile isicelo sokhuselo lwakho.
-proxyResolveFailure=I-Firefox ilungiselelwe ukuze isebenzise iseva engummeli engenakufunyanwa.
-proxyConnectFailure=I-Firefox ilungiselelwe ukusebenzisa iseva engummeli ekwalayo ukudityaniswa.
+deniedPortAccess=Le dilesi isebenzisa itshaneli yenethiwekhi edla ngokusetyenziselwa ezinye iinjongo ezingezizo ezokubhrawuza iwebhu. Firefox isirhoxisile isicelo sokhuselo lwakho.
+proxyResolveFailure=Firefox ilungiselelwe ukuze isebenzise iseva engummeli engenakufunyanwa.
+proxyConnectFailure=Firefox ilungiselelwe ukusebenzisa iseva engummeli ekwalayo ukudityaniswa.
 contentEncodingError=Iphepha ozama ukulibona alinakho ukubonakaliswa kuba lisebenzisa uhlobo locutho olungasebenziyo okanye olungaxhaswayo.
 unsafeContentType=Iphepha ozama ukulibona alinakho ukubonakaliswa kuba liqulethwe kudidi lwefayile enokuba ayikhuselekanga ukuba ingavulwa. Nceda uqhagamshelane nabanini bewebhusayithi ubazise ngale ngxaki.
 externalProtocolTitle=Isicelo sangaphandle seprothokholi
