--- a/sq/browser/chrome/browser/devtools/gcli.properties
+++ b/sq/browser/chrome/browser/devtools/gcli.properties
@@ -82,12 +82,12 @@ helpListAll=Urdhra të Passhëm:
 # LOCALIZATION NOTE (helpListPrefix): The heading shown in response to the
 # 'help <search>' command (i.e. with a search string), just above the list of
 # matching commands.
-helpListPrefix=Urdhra që fillojnë me '%1$S':
+helpListPrefix=Urdhra që fillojnë me '%S':
 
 # LOCALIZATION NOTE (helpListNone): The heading shown in response to the 'help
 # <search>' command (i.e. with a search string), when there are no matching
 # commands.
-helpListNone=Pa urdhra që fillojnë me '%1$S'
+helpListNone=Pa urdhra që fillojnë me '%S'
 
 # LOCALIZATION NOTE (helpManRequired, helpManOptional, helpManDefault): When
 # the 'help x' command wants to show the manual for the 'x' command, it needs
