--- a/sq/browser/chrome/browser/devtools/webconsole.properties
+++ b/sq/browser/chrome/browser/devtools/webconsole.properties
@@ -157,7 +157,7 @@ longStringEllipsis=[…]
 # LOCALIZATION NOTE (NetworkPanel.fetchRemainingResponseContentLink): This is
 # displayed in the network panel when the response body is only partially
 # available.
-NetworkPanel.fetchRemainingResponseContentLink=Sill %1$S bajtet e mbetur
+NetworkPanel.fetchRemainingResponseContentLink=Sill %S bajtet e mbetur
 
 # LOCALIZATION NOTE (NetworkPanel.fetchRemainingRequestContentLink): This is
 # displayed in the network panel when the request body is only partially
@@ -229,7 +229,7 @@ maxCountersExceeded=U tejkalua numri maksimum i lejuar për numërues në këtë
 # LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
 # a new user of the developer tools pastes code into the console
 # %1 is the text of selfxss.okstring
-selfxss.msg=Sinjalizim Rrengu: Bëni kujdes kur kopjoni dhe ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë agresorit të vjedhë identitetin tuaj ose të marrë nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' më poshtë (nuk ka nevojë për shtypjen e tastit Enter) që të lejoni ngjitjen.
+selfxss.msg=Sinjalizim Mashtrimi: Bëni kujdes kur kopjoni dhe ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë agresorëve të vjedhin identitetin tuaj ose të marrin nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' më poshtë (nuk ka nevojë për shtypjen e tastit Enter) që të lejoni ngjitjen.
 
 # LOCALIZATION NOTE (selfxss.msg): the string to be typed
 # in by a new user of the developer tools when they receive the sefxss.msg prompt.
