--- a/sq/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/sq/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -27,7 +27,7 @@ cancelDownloadsOKText=Anulo 1 Shkarkim
 offlineCancelDownloadsAlertMsg=Nëse kaloni jashtë linje tani, do të anulohet 1 shkarkim. Jeni i sigurt se doni të kaloni jashtë linje?
 downloadErrorAlertTitle=Gabim Shkarkimi 
 quitCancelDownloadsAlertTitle=Të Anulohen Tërë Shkarkimet?
-fileExecutableSecurityWarningDontAsk=Mos më pyet sërish
+fileExecutableSecurityWarningDontAsk=Mos më pyet më
 canceled=U anulua
 dontGoOfflineButton=Rri Në Linjë
 failed=Dështoi
