--- a/sq/webapprt/webapprt/overrides/dom.properties
+++ b/sq/webapprt/webapprt/overrides/dom.properties
@@ -9,7 +9,7 @@ KillScriptLocation=Programth: %S
 StopScriptButton=Ndale programthin
 DebugScriptButton=Diagnostikoni programthin
 WaitForScriptButton=Vazhdo
-DontAskAgain=&Mos më pyet sërish
+DontAskAgain=&Mos më pyet më
 JSURLLoadBlockedWarning=Përpjekje për ngarkimi javascript-i: U bllokua prej\npërgjegjësit të sigurisë një URL prej një strehe\nnë një dritare me lëndë nga një tjetër strehë.
 WindowCloseBlockedWarning=Programthet mund të mos mbyllin dritare që nuk qenë hapur prej programthesh.
 OnBeforeUnloadTitle=Jeni i sigurt?
