Let's make THB beta green again

--- a/sq/dom/chrome/accessibility/AccessFu.properties
+++ b/sq/dom/chrome/accessibility/AccessFu.properties
@@ -6,6 +6,7 @@
 screenReaderStarted = Lexuesi i ekranit u vu në punë
 screenReaderStopped = Lexuesi i ekranit u ndal
 
+# Roles
 menubar        =       shtyllë menuje
 scrollbar      =       shtyllë rrëshqitjesh
 grip           =       dorëz
