--- a/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -84,7 +84,7 @@ feed-button.tooltiptext2 = Pajtohuni te kjo faqe
 # LOCALIZATION NOTE (characterencoding-button.label): The \u00ad character at the beginning
 # of the string is used to disable auto hyphenation on the button text when it is displayed
 # in the menu panel.
-characterencoding-button.label = \u00adKodim Shkronjash
+# characterencoding-button.label = \u00adKodim Shkronjash
 characterencoding-button.tooltiptext2 = Shfaqni mundësi rreth Kodimit të Shkronjave
 
 email-link-button.label = Dërgojeni Lidhjen me Email
