[ca] update from Pootle (firefox)

--- a/ca/browser/chrome/browser/browser.properties
+++ b/ca/browser/chrome/browser/browser.properties
@@ -530,6 +530,8 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 finestra);#1 (#2 finestres
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
+getUserMedia.shareSelectedDevices.label = Comparteix el dispositiu seleccionat;Comparteix els dispositius seleccionats
+getUserMedia.shareSelectedDevices.accesskey = C
 getUserMedia.shareScreen.label = Comparteix la pantalla
 getUserMedia.shareApplication.label = Comparteix l'aplicació seleccionada
 getUserMedia.shareWindow.label = Comparteix la finestra seleccionada
@@ -578,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (càmera i micròfon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (càmera, micròfon i aplicació)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (càmera, micròfon i pantalla)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (càmera, micròfon i finestra)
+getUserMedia.sharingMenuCameraApplication = %S (càmera i aplicació)
+getUserMedia.sharingMenuCameraScreen = %S (càmera i pantalla)
+getUserMedia.sharingMenuCameraWindow = %S (càmera i finestra)
 getUserMedia.sharingMenuMicrophoneApplication = %S (micròfon i aplicació)
 getUserMedia.sharingMenuMicrophoneScreen = %S (micròfon i pantalla)
 getUserMedia.sharingMenuMicrophoneWindow = %S (micròfon i finestra)
@@ -604,4 +609,5 @@ customizeTips.tip0.learnMore = Més informació
 # the appmenu labels and buttons that appear when an update is staged for
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
+appmenu.restartNeeded.description = Reinicieu el %S per aplicar les actualitzacions
 appmenu.restartBrowserButton.label = Reinicia el %S
