--- a/ca/browser/chrome/browser/devtools/timeline.properties
+++ b/ca/browser/chrome/browser/devtools/timeline.properties
@@ -17,10 +17,12 @@ timeline.label=Línia de temps
 
 # LOCALIZATION NOTE (timeline.panelLabel):
 # This is used as the label for the toolbox panel.
+timeline.panelLabel=Subfinestra Línia de temps
 
 # LOCALIZATION NOTE (timeline.tooltip):
 # This string is displayed in the tooltip of the tab when the timeline is
 # displayed inside the developer tools window.
+timeline.tooltip=Línia de temps de rendiment
 
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
@@ -29,7 +31,11 @@ timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
+timeline.records=REGISTRES
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Estils
+timeline.label.reflow=Reajustament
+timeline.label.paint=Àrea actualitzada
+timeline.label.domevent=Esdeveniment DOM
