--- a/ca/browser/chrome/browser/devtools/scratchpad.properties
+++ b/ca/browser/chrome/browser/devtools/scratchpad.properties
@@ -34,6 +34,7 @@ openFile.failed=No s'ha pogut llegir el fitxer.
 
 # LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
 # open fails.
+importFromFile.convert.failed=No s'ha pogut convertir el fitxer en Unicode des de %1$S.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
