--- a/ca/toolkit/chrome/global/resetProfile.properties
+++ b/ca/toolkit/chrome/global/resetProfile.properties
@@ -8,3 +8,5 @@
 resetUnusedProfile.message=Sembla que no heu iniciat el %S des de fa temps. Voleu realitzar una neteja per tal que s'iniciï com si fos la primera vegada? Per cert, ben tornat!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Restableix el %S…
+refreshProfile.resetButton.accesskey=e
