[ca] update from Pootle (firefox)

--- a/ca/browser/chrome/browser/browser.properties
+++ b/ca/browser/chrome/browser/browser.properties
@@ -610,4 +610,6 @@ customizeTips.tip0.learnMore = Més informació
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
 appmenu.restartNeeded.description = Reinicieu el %S per aplicar les actualitzacions
+appmenu.updateFailed.description = Ha fallat l'actualització en segon pla; baixeu l'actualització
 appmenu.restartBrowserButton.label = Reinicia el %S
+appmenu.downloadUpdateButton.label = Baixa l'actualització
