--- a/ca/dom/chrome/accessibility/AccessFu.properties
+++ b/ca/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    premut
 stateExpanded    =    expandit
 stateCollapsed   =    reduït
 stateUnavailable =    no disponible
+stateReadonly    =    només de lectura
 stateRequired    =    necessari
 stateTraversed   =    visitat
 stateHasPopup    =    té una finestra emergent
