--- a/ca/browser/chrome/browser/downloads/downloads.properties
+++ b/ca/browser/chrome/browser/downloads/downloads.properties
@@ -45,6 +45,9 @@ stateDirty=S'ha bloquejat: El fitxer pot ser una aplicació potencialment perill
 # period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
 # this turns out to be longer than the other existing status strings.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Aquest fitxer conté un virus o programari maliciós.
+blockedPotentiallyUnwanted=Aquest fitxer podria malmetre l'ordinador.
+blockedUncommon=És possible que no sigui segur obrir aquest fitxer.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
@@ -54,6 +57,13 @@ stateDirty=S'ha bloquejat: El fitxer pot ser una aplicació potencialment perill
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Esteu segur que voleu desblocar aquest fitxer?
+unblockTypeMalware=Aquest fitxer conté un virus o programari maliciós que malmetrà l'ordinador.
+unblockTypePotentiallyUnwanted=Aquest fitxer, camuflat com a una baixada útil, farà canvis indesitjats als vostres programes i paràmetres.
+unblockTypeUncommon=Aquest fitxer s'ha baixat des d'un lloc web desconegut i potencialment perillós i és possible que no sigui segur obrir-lo.
+unblockTip=Podeu cercar una font de baixada alternativa o provar de baixar el fitxer més tard.
+unblockButtonContinue=Desbloca igualment
+unblockButtonCancel=Mantén-me protegit
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
