--- a/ca/dom/chrome/security/security.properties
+++ b/ca/dom/chrome/security/security.properties
@@ -9,6 +9,7 @@ CrossSiteRequestBlocked=S'ha blocat una sol·licitud multiorigen. La política d
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=El lloc ha especificat una capçalera «Strict-Transport-Security» no vàlida.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=El lloc ha especificat una capçalera «Public-Key-Pins» no vàlida.
 InsecurePasswordsPresentOnPage=Hi ha camps de contrasenya en una pàgina insegura (http://). Això suposa un risc de seguretat, ja que permet robar les credencials d'inici de sessió de l'usuari.
 InsecureFormActionPasswordsPresent=Hi ha camps de contrasenya en un formulari amb una acció de formulari insegura (http://). Això suposa un risc de seguretat, ja que permet robar les credencials d'inici de sessió de l'usuari.
 InsecurePasswordsPresentOnIframe=Hi ha camps de contrasenya en un marc iframe insegur (http://). Això suposa un risc de seguretat, ja que permet robar les credencials d'inici de sessió de l'usuari.
