--- a/ca/netwerk/necko.properties
+++ b/ca/netwerk/necko.properties
@@ -38,3 +38,4 @@ PhishingAuthAccept=Ho entenc i aniré molt amb compte
 SuperfluousAuth=Ara entrareu al lloc «%1$S» amb el nom d'usuari «%2$S», però el lloc web no requereix autentificació. Podria ser intent d'enganyar-vos.\n\nÉs «%1$S» el lloc que voleu visitar?
 AutomaticAuth=Ara entrareu al lloc «%1$S» amb el nom d'usuari «%2$S».
 
+TrackingUriBlocked=S'ha blocat el recurs del lloc «%1$S» perquè protecció contra el seguiment està activada.
