Bug 529697 - (CSP 1.1) Implement form-action directive

--- a/sk/webapprt/webapprt/overrides/appstrings.properties
+++ b/sk/webapprt/webapprt/overrides/appstrings.properties
@@ -30,6 +30,6 @@ externalProtocolChkMsg=Zapamätať si nastavenie pre všetky odkazy rovnakého t
 externalProtocolLaunchBtn=Spustiť aplikáciu
 malwareBlocked=Stránka %S bola označená ako podvodná a na základe nastavení zabezpečenia bola zablokovaná.
 phishingBlocked=Webová stránka %S je nahlásená ako podozrivá stránka pokúšajúca sa podvodným spôsobom vylákať od používateľov osobné alebo finančné údaje.
-cspFrameAncestorBlocked=Táto aplikácia sa pokúsila pristúpiť k zdroju, ktorý obsahuje zásady ochrany obsahu, ktoré nepovoľujú tento spôsob jeho vloženia do objektu.
+cspBlocked=Táto aplikácia sa pokúsila pristúpiť k zdroju, ktorý obsahuje zásady ochrany obsahu, ktoré nepovoľujú tento spôsob jeho načítania.
 corruptedContentError=Táto aplikácia nemohla byť spustená kvôli chybe pri prenose údajov.
 remoteXUL=Aplikácia používa technológiu, ktorá už viac nie je podporovaná.
