--- a/sk/dom/chrome/appstrings.properties
+++ b/sk/dom/chrome/appstrings.properties
@@ -30,6 +30,6 @@ externalProtocolChkMsg=Zapamätať si nastavenie pre všetky odkazy rovnakého t
 externalProtocolLaunchBtn=Spustiť aplikáciu
 malwareBlocked=Stránka %S bola označená ako podvodná a na základe nastavení zabezpečenia bola zablokovaná.
 phishingBlocked=Webová stránka %S je nahlásená ako podozrivá stránka pokúšajúca sa podvodným spôsobom vylákať od používateľov osobné alebo finančné údaje.
-cspFrameAncestorBlocked=Táto stránka obsahuje zásady ochrany obsahu, ktoré nepovoľujú tento spôsob jej vloženia do objektu.
+cspBlocked=Táto stránka obsahuje zásady ochrany obsahu, ktoré nepovoľujú tento spôsob jej načítania.
 corruptedContentError=Táto stránka nemohla byť zobrazená kvôli chybe pri prenose údajov.
 remoteXUL=Táto stránka používa nepodporovanú technológiu, ktorá nie je predvolene zapnutá.
