Getting aurora green

--- a/sq/dom/chrome/accessibility/AccessFu.properties
+++ b/sq/dom/chrome/accessibility/AccessFu.properties
@@ -6,6 +6,7 @@
 screenReaderStarted = Lexuesi i ekranit u vu në punë
 screenReaderStopped = Lexuesi i ekranit u ndal
 
+# Roles
 menubar        =       shtyllë menuje
 scrollbar      =       shtyllë rrëshqitjesh
 grip           =       dorëz
@@ -157,7 +158,6 @@ statePressed     =    i shtypur
 stateExpanded    =    i zgjeruar
 stateCollapsed   =    i tkurrur
 stateUnavailable =    jo i passhëm
-stateReadonly    =    vetëm për lexim
 stateRequired    =    i domosdoshëm
 stateTraversed   =    i vizituar
 stateHasPopup    =    ka flluskë
