--- a/sq/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sq/browser/chrome/browser/devtools/scratchpad.properties
@@ -96,7 +96,7 @@ scratchpad.panelLabel=Panel Flete të Papastër
 # LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
 # a new user of the developer tools pastes code into the console
 # %1 is the text of selfxss.okstring
-selfxss.msg=Sinjalizim Karremëzimi: Bëni kujdes kur ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë sulmuesve të vjedhin identitetin tuaj ose të marrin nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' te fleta e papastër më poshtë që të lejoni ngjitjen.
+#selfxss.msg=Sinjalizim Mashtrimi: Bëni kujdes kur ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë sulmuesve të vjedhin identitetin tuaj ose të marrin nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' te fleta e papastër më poshtë që të lejoni ngjitjen.
 
 # LOCALIZATION NOTE (selfxss.msg): the string to be typed
 # in by a new user of the developer tools when they receive the sefxss.msg prompt.
