--- a/sq/browser/chrome/browser/downloads/downloads.properties
+++ b/sq/browser/chrome/browser/downloads/downloads.properties
@@ -96,7 +96,7 @@ statusSeparatorBeforeNumber=%1$S \u2014  %2$S
 
 fileExecutableSecurityWarning="%S" është një kartelë e ekzekutueshme. Kartelat e ekzekutueshme mund të përmbajnë viruse ose tjetër lloj kodi keqdashës që mund të dëmtojë kompjuterin tuaj. Bëni kujdes kur hapni këtë kartelë. Jeni i sigurt se doni të nisni "%S"?
 fileExecutableSecurityWarningTitle=Të hapet Kartela e Ekzekutueshme?
-fileExecutableSecurityWarningDontAsk=Mos më pyet sërish për këtë
+fileExecutableSecurityWarningDontAsk=Mos më pyet më për këtë
 
 # LOCALIZATION NOTE (otherDownloads2):
 # This is displayed in an item at the bottom of the Downloads Panel when
